@@ -1,0 +1,6 @@
+travis:
+	python setup.py test
+	python setup.py install
+clean:
+	find . -iname "*.pyc" -exec rm -vf {} \;
+	find . -iname "__pycache__" -delete
