@@ -1,9 +1,13 @@
 Sandhi Splitter
 ===
-A probabalistic approach to solving the problem of agglutination which exists in indic languages. Implementation here applies for Malayalam.
-
+A probabalistic approach to solving the problem of agglutination which exists in indic languages. Implementation here applies for Malayalam, although codes used are mostly language agnostic.
 
 # Training
 
 # Using Module
+## Installation
+Use sudo if necessary.
+```python
+python setup.py install
+```
 
