@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Tests, pbr Added Tests for first module. Rebased many commits onto a single one
 * Serialization of trie to store model
 * Reorganization Moved annotation-helper, added new directory structure
 * Export and Reorganizing Offers serialized data for dump. Malayalam specific rules in helper.js split into separate file
